# volt

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  lib.rs  user.rs
src/client/: websocket.rs
src/voltcore/: cache.rs  imageserver.rs  mod.rs  ratelimits.rs
src/voltcore/structs/: bot_structs.rs  mod.rs  user_structs.rs
tests/: bot_client_test.rs  user_client_test.rs
tests/core_tests/: imageserver_test.rs  websocket_test.rs
