[package]
name = "volt-rs"
version = "0.1.1"
description = "A API wrapper for the revolt API"
license = "MIT"
homepage = "https://crates.io/crates/volt-rs"
documentation = "https://docs.rs/volt-rs/0.1.0/volt/"
repository = "https://github.com/fishin-rod/volt"
authors = ["Fish"]
readme = "README.md"
keywords = ["API", "Revolt"]
edition = "2021"
resolver = "2"

[features]
default = ["core", "client", "bot"]
core = []
client = ["core"]
bot = ["core"]
experimental = ["core"]

[lib]
name = "volt"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.17", features = ["json", "multipart"] }
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tungstenite = {version = "0.19.0", features = ["native-tls"]}
url = "2.3.1"

[dev-dependencies]
volt-rs = { path = ".", features = ["experimental"] }
dotenv = "0.15.0"
image = "0.24.6"